Fix iframe width to be 100% to avoid overflow in smaller screen

--- a/src/scss/reader.scss
+++ b/src/scss/reader.scss
@@ -34,6 +34,7 @@ iframe
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
+  width:100%;
 }
 
 pre
